--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
-appdirs==1.4.3
-attrs==19.1.0
-certifi==2019.3.9
+certifi==2018.11.29
 chardet==3.0.4
-Click==7.0
 dj-database-url==0.5.0
 Django==2.2
+get==2018.11.19
 gunicorn==19.9.0
 idna==2.8
-JPype1==0.7.0
-konlpy==0.5.1
-psycopg2-binary==2.7.7
-pytz==2018.9
 requests==2.21.0
-sqlparse==0.3.0
-toml==0.10.0
-urllib3==1.24.2
 whitenoise==4.1.2
