--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-certifi==2018.11.29
-chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.2
-get==2018.11.19
 gunicorn==19.9.0
-idna==2.8
 requests==2.21.0
 whitenoise==4.1.2
+psycopg2-binary==2.7.7
