--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+asgiref==3.2.3
+certifi==2019.11.28
+chardet==3.0.4
 dj-database-url==0.5.0
-Django==2.2.8
-gunicorn==19.9.0
-requests==2.21.0
-whitenoise==4.1.2
-psycopg2-binary==2.7.7
+Django==3.0.2
+gunicorn==20.0.4
+idna==2.8
+psycopg2-binary==2.8.4
+pytz==2019.3
+requests==2.22.0
+sqlparse==0.3.0
+urllib3==1.24.3
+whitenoise==5.0.1
