--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.gitignore.io/api/macos,django
-# Edit at https://www.gitignore.io/?templates=macos,django
+# Created by https://www.gitignore.io/api/macos,django,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=macos,django,visualstudiocode
 
 ### Django ###
 *.log
@@ -155,4 +155,11 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# End of https://www.gitignore.io/api/macos,django
+### VisualStudioCode ###
+.vscode/*
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+# End of https://www.gitignore.io/api/macos,django,visualstudiocode
